--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -651,33 +651,234 @@
 
 
 
-
-
 <!-- CH 6 -->
 <section id="ch6" class="section-box">
-  <div class="section-title">
-    CHAPTER 6 – A shifting political system
-  </div>
+  <div class="section-title">CHAPTER 6 – A shifting political system</div>
   <div class="inner mt-3">
+
     <div class="subhead">Documents</div>
-    <ul class="file-list"><li class="muted">None yet.</li></ul>
+    <ul class="file-list"></ul>
 
     <div class="subhead">Literature</div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Bunker, K. (2025). Mapping party systems over time: a spatial distribution of ideological competition in Chile. <em>Journal of Political Ideologies</em>, 1–18.</span>
+        <span class="file-title">Heise, J. (1974). <em>Historia de Chile: el período parlamentario, 1861–1925</em>. Santiago: Andrés Bello.</span>
         <a class="tiny-link" href="#">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Bunker, K. (2025). Challenging conventional wisdom in new democracies: social diversity, electoral rules, and party system fragmentation in Chile. <em>Election Law Journal</em>.</span>
+        <span class="file-title">Cruz-Coke, R. (1984). <em>Historia electoral de Chile 1925–1973</em>. Santiago: Jurídica de Chile.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Urzúa Valenzuela, G. (1992). <em>Historia política de Chile y su evolución electoral: Desde 1810 a 1992</em>. Santiago: Jurídica de Chile.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Laakso, M.; Taagepera, R. (1979). “Effective number of parties: A measure with application to West Europe.” <em>Comparative Political Studies</em>, 12(1), 3–27.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">Bunker, K. (2025a). Challenging conventional wisdom in new democracies: Social diversity, electoral rules, and party system fragmentation in Chile. <em>Election Law Journal: Rules, Politics, and Policy</em> (online first), 1–25.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Bunker, K. (2025b). Mapping party systems over time: A spatial distribution of ideological competition in Chile. <em>Journal of Political Ideologies</em> (online first), 1–18.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">Lipset, S. M.; Rokkan, S. (1967). <em>Cleavage Structures, Party Systems, and Voter Alignments</em>. New York: Free Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Deegan-Krause, K. (2007). “New dimensions of political cleavage.” In R. J. Dalton & H.-D. Klingemann (eds.), <em>The Oxford Handbook of Political Behavior</em> (pp. 538–556). Oxford: Oxford University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Bartolini, S.; Mair, P. (1990). <em>Identity, Competition, and Electoral Availability: The Stabilization of European Electorates 1885–1985</em>. Cambridge: Cambridge University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Dix, R. H. (1989). “Cleavage structures and party systems in Latin America.” <em>Comparative Politics</em>, 22(1), 23–37.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Coppedge, M. (1998). “The evolution of Latin American party systems.” In S. Mainwaring & A. Valenzuela (eds.), <em>Politics, Society, and Democracy: Latin America</em> (pp. 172–206). Boulder: Westview Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Roberts, K. M.; Wibbels, E. (1999). “Party systems and electoral volatility in Latin America: A test of economic, institutional, and structural explanations.” <em>American Political Science Review</em>, 93(3), 575–590.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Mainwaring, S.; Scully, T. R. (eds.). (1995). <em>Building Democratic Institutions: Party Systems in Latin America</em>. Stanford: Stanford University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">Gil, F. (1969). <em>El sistema político de Chile</em>. Santiago de Chile: Editorial Andrés Bello.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Scully, T. R. (1992). <em>Rethinking the Center: Party Politics in Nineteenth- and Twentieth-Century Chile</em>. Stanford: Stanford University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Gamboa, R.; López, M.; Baeza, J. (2013). “La evolución programática de los partidos chilenos: 1970–2009: de la polarización al consenso.” <em>Revista de Ciencia Política</em>, 33(2), 443–467.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Garretón, M. A. (1983). <em>El proceso político chileno</em>. Santiago de Chile: FLACSO.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Valenzuela, J. S. (1995). “Orígenes y transformaciones del sistema de partidos en Chile.” <em>Estudios Públicos</em>, 58, 5–80.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Valenzuela, A.; Valenzuela, J. S. (1983). “Partidos de oposición bajo el régimen autoritario chileno.” In M. A. Garretón (ed.), <em>Chile 1973–198?</em> Santiago de Chile: FLACSO.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">Duverger, M. (1954). <em>Political Parties: Their Organization and Activity in the Modern State</em>. New York: Wiley.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Rae, D. (1968). <em>The Political Consequences of Electoral Laws</em>. New Haven: Yale University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Riker, W. H. (1982). “The two-party system and Duverger’s law: An essay on the history of political science.” <em>American Political Science Review</em>, 76(4), 753–766.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Lijphart, A. (1990). <em>Electoral Systems and Party Systems: A Study of Twenty-Seven Democracies, 1945–1990</em>. Oxford: Oxford University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Nohlen, D. (2005). <em>Elections in the Americas</em>. Oxford: Oxford University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Jones, M. P. (1995). “A guide to the electoral systems of the Americas.” <em>Electoral Studies</em>, 14(1), 5–21.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Siavelis, P. M. (2005). “Chile: The unexpected (and expected) consequences of electoral engineering.” In M. Gallagher & P. Mitchell (eds.), <em>The Politics of Electoral Systems</em> (pp. 433–452). Oxford: Oxford University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Rahat, G.; Sznajder, M. (1998). “Electoral engineering in Chile: The electoral system and limited democracy.” <em>Electoral Studies</em>, 17(4), 429–442.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Gamboa, R.; Dockendorff, A. (2023). “Chilean electoral system: A moderate D’Hondt PR.” In A. Farazmand (ed.), <em>Global Encyclopedia of Public Administration, Public Policy, and Governance</em> (pp. 1529–1534). Cham: Springer International Publishing.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Angell, A. (2003). “Party change in Chile in comparative perspective.” <em>Revista de Ciencia Política</em>, 23(2), 88–108.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Magar, E.; Rosenblum, M. R.; Samuels, D. (1998). “On the absence of centripetal incentives in double-member districts: The case of Chile.” <em>Comparative Political Studies</em>, 31(6), 714–739.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Navia, P. D. (2003). <em>You Select the Rules of the Game and Lose? Advantages and Constraints When Choosing Electoral Rules: The Case of Chile</em> (PhD thesis). New York, NY: New York University.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">Ordeshook, P. C.; Shvetsova, O. V. (1994). “Ethnic heterogeneity, district magnitude, and the number of parties.” <em>American Journal of Political Science</em>, 38, 100–123.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Neto, O. A.; Cox, G. W. (1997). “Electoral institutions, cleavage structures, and the number of parties.” <em>American Journal of Political Science</em>, 41(1), 149–174.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Cox, G. W. (1997). <em>Making Votes Count: Strategic Coordination in the World’s Electoral Systems</em>. Cambridge: Cambridge University Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Clark, W. R.; Golder, M. (2006). “Rehabilitating Duverger’s theory: Testing the mechanical and strategic modifying effects of electoral laws.” <em>Comparative Political Studies</em>, 39(6), 679–708.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Teorell, J.; Lindstedt, C. (2010). “Measuring electoral systems.” <em>Political Research Quarterly</em>, 63(2), 434–448.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Crisp, B. F.; Olivella, S.; Potter, J. D. (2012). “Electoral contexts that impede voter coordination.” <em>Electoral Studies</em>, 31(1), 143–158.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Bunker, K.; Negretto, G. L. (2024). “The party system effects of unstable electoral rules in Latin America.” <em>Party Politics</em>, 30(6), 1126–1142.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Roussias, N. (2022). “The evolution of new party systems: Voter learning and electoral systems.” <em>Political Studies Review</em>, 20(3), 410–432.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Tavits, M. (2005). “The development of stable party support: Electoral dynamics in post-communist Europe.” <em>American Journal of Political Science</em>, 49(2), 283–298.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Moser, R. G.; Scheiner, E. (2009). “Strategic voting in established and new democracies: Ticket splitting in mixed-member electoral systems.” <em>Electoral Studies</em>, 28(1), 51–61.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Stoll, H. (2011). “Dimensionality and the number of parties in legislative elections.” <em>Party Politics</em>, 17(3), 405–429.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+
+      <li class="item-row">
+        <span class="file-title">Bunker, K. (2018). “La elección de 2017 y el fraccionamiento del sistema de partidos en Chile.” <em>Revista Chilena de Derecho y Ciencia Política</em>, 9(2), 204–229.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Bellolio, C. (2019). “Juego de generaciones. Apuntes sobre el nuevo paisaje político chileno.” <em>Estudios Públicos</em>, 154, 201–229.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Scully, T. R. (2022). “A fourth critical juncture?” In <em>Critical Junctures and Historical Legacies: Insights and Methods for Comparative Social Science</em> (p. 351).</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Jofré, H.; Cabezas, J. M. (2025). “Los efectos de la reforma electoral de 2015 sobre el sistema de partidos chileno.” <em>Dados</em>, 68(3), e20221091.</span>
         <a class="tiny-link" href="#">GO</a>
       </li>
     </ul>
 
     <div class="subhead">References</div>
-    <ul class="file-list"><li class="muted">None yet.</li></ul>
+    <ul class="file-list">
+      <li class="item-row">
+        <span class="file-title">Servicio Electoral de Chile (Servel). Datos electorales.</span>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">LINK</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Author’s website. Lista de independientes que han competido en Chile.</span>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">LINK</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Appendix – Ideological maps (Figures A1–A3).</span>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">LINK</a>
+      </li>
+    </ul>
+
   </div>
 </section>
+
+
+
+
+
+
+
+
 
 <!-- CH 8 -->
 <section id="ch8" class="section-box">
