--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1412,35 +1412,80 @@
 
 <!-- CH 12 -->
 <section id="ch12" class="section-box">
-  <div class="section-title">
-    CHAPTER 12 – The (first) constitutional convention
-  </div>
+  <div class="section-title"><strong>CHAPTER 12</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead">Documents</div>
+    <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Informe Final</span>
-        <a class="tiny-link" href="https://drive.google.com/uc?export=download&id=1-pFhQuJA9E1sCKFjbVSTOIy6OjpZL_mL" download rel="noopener noreferrer">PDF</a>
+        <span class="file-title">Informe final: Verdad histórica, reparación integral y garantías de no repetición (Subcomisión de Verdad Histórica, Reparación), diciembre 2021.</span>
+        <a class="tiny-link" href="#" download>PDF</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Propuesta Nueva Constitución 2022</span>
-        <a class="tiny-link" href="https://drive.google.com/uc?export=download&id=19eOR-MN8SLneKHbhVAYDwnAxZ9qcLSct" download rel="noopener noreferrer">PDF</a>
+        <span class="file-title">El mapa político no oficial de la Convención Constitucional de Tresquintos.</span>
+        <a class="tiny-link" href="#" download>PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Roll-call votes in the Plenary of the Constitutional Convention of Chile, 2021–2022 (dataset).</span>
+        <a class="tiny-link" href="#" download>PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Roll-call votes in the Commissions of the Constitutional Convention of Chile, 2021–2022 (dataset).</span>
+        <a class="tiny-link" href="#" download>PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Propuesta de Nueva Constitución (2022).</span>
+        <a class="tiny-link" href="#" download>PDF</a>
       </li>
     </ul>
 
-    <div class="subhead">Literature</div>
+    <div class="subhead mt-3"><strong>Literature</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title">Valenzuela Everke, — (—). <em>[Title]</em>. [Place]: [Publisher].</span>
+        <span class="file-title">Bunker, K. (2023a). ¿Cuál fue el nivel de acuerdo en el pleno de la convención constitucional de 2021? <em>Ideas: Laboratorio Democracia y Gobierno USS</em>, 1(6), 1–4.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Bunker, K. (2023b). ¿Cuál fue el nivel de acuerdo en las comisiones de la convención constitucional de 2021? <em>Ideas: Laboratorio Democracia y Gobierno USS</em>, 1(5), 1–4.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Hinich, M., &amp; Munger, M. (1992). A spatial theory of ideology. <em>Journal of Theoretical Politics</em>, 4(1), 5–30.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">McFadden, D. (1973). Conditional logit analysis of qualitative choice behavior. In P. Zarembka (Ed.), <em>Frontiers of Econometrics</em> (pp. 105–142). New York, NY: Academic Press.</span>
+        <a class="tiny-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Poole, K., &amp; Rosenthal, H. (1985). A spatial model for legislative roll-call analysis. <em>American Journal of Political Science</em>, 29(2), 357–384.</span>
         <a class="tiny-link" href="#">GO</a>
       </li>
     </ul>
 
-    <div class="subhead">References</div>
-    <ul class="file-list"><li class="muted">None yet.</li></ul>
+    <div class="subhead mt-3"><strong>References</strong></div>
+    <ul class="file-list">
+      <li class="item-row">
+        <span class="file-title">Fontaine, B. (2022). Imagen crítica sobre liderazgo de la Convención (publicación en X/Twitter).</span>
+        <a class="ref-link" href="https://x.com/berfontaine/status/1582531326636236800" target="_blank" rel="noopener noreferrer">LINK</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Sánchez, J. (2021, July 6). El primer round por el quorum de 2/3 y los vacíos en las normas de la Convención Constitucional. <em>Ex-Ante</em>.</span>
+        <a class="ref-link" href="https://www.ex-ante.cl/el-primer-round-por-el-quorum-de-2-3-y-los-vacios-en-las-normas-de-la-convencion-constitucional/" target="_blank" rel="noopener noreferrer">LINK</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Paul, F. (2022, April 8). Convención Constituyente: 3 razones que explican la caída en el apoyo al organismo que trabaja en la nueva Constitución de Chile. <em>BBC Mundo</em>.</span>
+        <a class="ref-link" href="https://www.bbc.com/mundo/noticias-america-latina-61015040" target="_blank" rel="noopener noreferrer">LINK</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Tralma, D. (2022, September 19). Por qué el plebiscito del 4-S se transformó en la mayor derrota de la izquierda desde 1990, según los analistas. <em>Ex-Ante</em>.</span>
+        <a class="ref-link" href="https://www.ex-ante.cl/por-que-el-plebiscito-del-4-s-se-transformo-en-la-mayor-derrota-de-la-izquierda-desde-1990-segun-los-analistas/" target="_blank" rel="noopener noreferrer">LINK</a>
+      </li>
+    </ul>
+
   </div>
 </section>
+
 
 <!-- CH 14 -->
 <section id="ch14" class="section-box">
