--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1708,26 +1708,64 @@
 
 <!-- CH 16 -->
 <section id="ch16" class="section-box">
-  <div class="section-title">
-    CHAPTER 16 – The (second) constitutional council
-  </div>
+  <div class="section-title"><strong>CHAPTER 16</strong></div>
   <div class="inner mt-3">
 
-    <div class="subhead">Documents</div>
+    <div class="subhead"><strong>Documents</strong></div>
     <ul class="file-list">
       <li class="item-row">
-        <span class="file-title muted">Propuesta Nueva Constitución 2023</span>
-        <span class="file-meta">PDF • link pending</span>
+        <span class="file-title"><em>Roll-call votes in the Plenary of the Constitutional Council of Chile, 2023</em>. Dataset.</span>
+        <a class="pdf-link" href="#">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title"><em>Roll-call votes in the Commissions of the Constitutional Council of Chile, 2023</em>. Dataset.</span>
+        <a class="pdf-link" href="#">PDF</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title"><em>Propuesta de Nueva Constitución (2023)</em>.</span>
+        <a class="pdf-link" href="#">PDF</a>
       </li>
     </ul>
 
-    <div class="subhead">Literature</div>
-    <ul class="file-list"><li class="muted">None yet.</li></ul>
+    <div class="subhead mt-3"><strong>Literature</strong></div>
+    <ul class="file-list">
+      <li class="item-row">
+        <span class="file-title">Valenzuela Everke, L. (2023). Radiografía al Consejo Constitucional. <em>Res Pública Estudio</em>, 995: 1–15.</span>
+        <a class="go-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Bunker, K. (2023c). ¿Cuál fue el nivel de acuerdo en el pleno del consejo constitucional de 2023? <em>Ideas: Laboratorio Democracia y Gobierno USS</em>, 1(7): 1–4.</span>
+        <a class="go-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Bunker, K. (2023d). ¿Cuál fue el nivel de acuerdo en las comisiones del consejo constitucional de 2023? <em>Ideas: Laboratorio Democracia y Gobierno USS</em>, 1(8): 1–4.</span>
+        <a class="go-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">Hinich, M.; Munger, M. (1992). A Spatial Theory of Ideology. <em>Journal of Theoretical Politics</em>, 4(1): 5–30.</span>
+        <a class="go-link" href="#">GO</a>
+      </li>
+      <li class="item-row">
+        <span class="file-title">McFadden, D. (1973). Conditional Logit Analysis of Qualitative Choice Behavior. In <em>Frontiers of Econometrics</em> (ed. P. Zarembka), 105–142. New York: Academic Press.</span>
+        <a class="go-link" href="#">GO</a>
+      </li>
+    </ul>
 
-    <div class="subhead">References</div>
-    <ul class="file-list"><li class="muted">None yet.</li></ul>
+    <div class="subhead mt-3"><strong>References</strong></div>
+    <ul class="file-list">
+      <li class="item-row">
+        <span class="file-title">Ex-Ante. (2023, May 27). Renuncia al Consejo Constitucional Aldo Sanhueza, ex republicano acusado de abuso sexual.</span>
+        <a class="ref-link" href="https://www.ex-ante.cl/renuncia-al-consejo-constitucional-aldo-sanhueza-ex-republicano-acusado-de-abuso-sexual/" target="_blank" rel="noopener noreferrer">LINK</a>
+      </li>
+    </ul>
+
   </div>
 </section>
+
+
+
+
+
 
 <hr>
 
