--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -28,6 +28,30 @@
 </head>
 <body>
 
+<!-- Top anchor for "Back to top" links -->
+<div id="top"></div>
+
+<!-- Header (matches main site navbar style) -->
+<div class="container mt-2">
+  <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
+    <a class="navbar-brand mx-0 mr-sm-auto" href="https://kennethbunker.github.io">Kenneth Bunker</a>
+    <div class="navbar-nav flex-row flex-wrap justify-content-center">
+      <a class="nav-item nav-link" href="https://kennethbunker.github.io/cv.pdf" target="_blank" rel="noopener noreferrer">CV</a>
+      <span class="nav-item navbar-text mx-1">/</span>
+      <a class="nav-item nav-link" href="https://kennethbunker.github.io/press">Press</a>
+      <span class="nav-item navbar-text mx-1">/</span>
+      <a class="nav-item nav-link" href="https://kennethbunker.github.io/prensa">Prensa</a>
+      <span class="nav-item navbar-text mx-1">/</span>
+      <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">Columns</a>
+      <span class="nav-item navbar-text mx-1">/</span>
+      <a class="nav-item nav-link" href="https://kennethbunker.github.io/theseus">Book</a>
+      <span class="nav-item navbar-text mx-1">/</span>
+      <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">Contact</a>
+    </div>
+  </nav>
+</div>
+<hr>
+
 <div class="container">
   <h1 class="h3 mb-3">Image Gallery by Chapter</h1>
   <p class="text-muted">Thumbnails of images related to <em>The Theseus Paradox</em>. Click to view full size.</p>
@@ -194,5 +218,14 @@
     <a class="btn btn-sm btn-outline-primary ml-2" href="https://kennethbunker.github.io/theseus/">Back to book page</a>
   </div>
 </div>
+
+<!-- Footer (matches main site: minimal link to twitter.com and year 2024) -->
+<div id="footer" class="mb-5">
+  <hr>
+  <div class="container text-center">
+    <a href="https://twitter.com/"><small>2024</small></a>
+  </div>
+</div>
+
 </body>
 </html>
