--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -219,11 +219,11 @@
   </div>
 </div>
 
-<!-- Footer (matches main site: minimal link to twitter.com and year 2024) -->
+<!-- Footer -->
 <div id="footer" class="mb-5">
   <hr>
   <div class="container text-center">
-    <a href="https://twitter.com/"><small>2024</small></a>
+    <a href="https://x.com/kennethbunker"><small>2025</small></a>
   </div>
 </div>
 
