--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1613,9 +1613,8 @@
 <div class="container">
 
 <div id="footer" class="mb-5">
-  <hr>
   <div class="container text-center">
-    <a href="https://twitter.com/kennethbunker"><small>2025</small></a>
+    <a href="https://x.com/kennethbunker"><small>2025</small></a>
   </div>
 </div>
 
