--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -179,8 +179,8 @@
     <div class="row">
       <div class="col-sm-6 col-md-4 mb-4">
         <figure>
-          <a href="16.1. - Consejo Constitucional Expertos.jpeg" target="_blank">
-            <img src="16.1. - Consejo Constitucional Expertos.jpeg" class="thumb" alt="Consejo Constitucional Expertos">
+          <a href="16.1. Consejo Constitucional Expertos.jpeg" target="_blank">
+            <img src="16.1. Consejo Constitucional Expertos.jpeg" class="thumb" alt="Consejo Constitucional Expertos">
           </a>
           <figcaption>Consejo Constitucional Expertos<br><small><em>(La Tercera)</em></small></figcaption>
         </figure>
