--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -1610,6 +1610,11 @@
 
 <hr>
 
+  <div class="text-center my-4">
+    <a class="btn btn-sm btn-outline-secondary" href="#top">Back to top</a>
+    <a class="btn btn-sm btn-outline-primary ml-2" href="https://kennethbunker.github.io/theseus/">Back to book page</a>
+  </div>
+
 <div class="container">
 
 <div id="footer" class="mb-5">
