--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -86,6 +86,23 @@
 </div>
 <hr>
 
+<!-- Resources jump bar -->
+<div class="container">
+  <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
+    <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
+    <div class="d-flex flex-wrap">
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
+    </div>
+  </div>
+</div>
+
+<hr>
+
 <div class="container">
   <h2 class="mb-2">Image Gallery by Chapter</h2>
   <p class="text-muted">Thumbnails of images related to <em>The Theseus Paradox</em>. Click to view full size.</p>
