--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -108,6 +108,23 @@
 </div>
 <hr>
 
+<!-- Resources jump bar -->
+<div class="container">
+  <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
+    <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
+    <div class="d-flex flex-wrap">
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
+    </div>
+  </div>
+</div>
+
+<hr>
+
 <div class="container">
   <h2 class="mb-2">Supplementary Files</h2>
   <p class="text-muted">Direct-download PDFs, academic literature, and web references by chapter.</p>
