--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -104,7 +104,12 @@
 <hr>
 
 <div class="container">
-  <h2 class="mb-2">Image Gallery by Chapter</h2>
+     <div style="display:inline-block;"><br><br>
+      <strong>Image Gallery by Chapter<</strong> <br><br> Thumbnails of images related to <em>The Theseus Paradox</em>. Click to view full size.
+    </div>
+
+
+ <h2 class="mb-2">Image Gallery by Chapter</h2>
   <p class="text-muted">Thumbnails of images related to <em>The Theseus Paradox</em>. Click to view full size.</p>
 
   <!-- Jump bar styled like "files" -->
