--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -105,7 +105,7 @@
 
 <div class="container">
      <div style="display:inline-block;"><br><br>
-      <strong>Image Gallery by Chapter<</strong> <br><br> Thumbnails of images related to <em>The Theseus Paradox</em>. Click to view full size.
+      <strong>Image Gallery by Chapter</strong> <br><br> Thumbnails of images related to <em>The Theseus Paradox</em>. Click to view full size.
     </div>
 
 
