--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -108,6 +108,18 @@
 </div>
 <hr>
 
+
+
+<hr>
+
+<div class="container">
+
+    <h2 class="mb-2">Chiles Transformation Amidst Crisis</h2>
+  <p class="text-muted">The Theseus Paradox.</p>
+
+
+<hr>
+
 <!-- Resources jump bar -->
 <div class="container">
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
@@ -125,9 +137,9 @@
 
 <hr>
 
-<div class="container">
-  <h2 class="mb-2">Supplementary Files</h2>
+  <h3 class="mb-2">Literature, Documents and References/h2>
   <p class="text-muted">Direct-download PDFs, academic literature, and web references by chapter.</p>
+
 
   <div class="alert alert-light border jumpbar">
     <strong class="mr-2">Jump to chapter:</strong>
