--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>The Theseus Paradox – Supplementary Files</title>
+  <title>Literature, Documents, and References - The Theseus Paradox</title>
   <meta name="description" content="Supplementary documents, literature, and references for The Theseus Paradox">
   <meta name="author" content="Kenneth Bunker">
   <link rel="canonical" href="https://kennethbunker.github.io/theseus/files/">
