--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -137,7 +137,7 @@
 
 <hr>
 
-  <h3 class="mb-2">Literature, Documents and References/h2>
+  <h3 class="mb-2">Literature, Documents and References</h2>
   <p class="text-muted">Direct-download PDFs, academic literature, and web references by chapter.</p>
 
 
