--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -109,13 +109,9 @@
 <hr>
 
 
-
-<hr>
-
 <div class="container">
-
-    <h2 class="mb-2">Chiles Transformation Amidst Crisis</h2>
-  <p class="text-muted">The Theseus Paradox.</p>
+    <h2 class="mb-2">Chiles Transformation Amidst Crisis: The Theseus Paradox</h2>
+  <p class="text-muted">Welcome to the author's website of <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Here you can find supplemental material, such as data, code, and references.</p>
 
 
 <hr>
