--- a/theseus/index.html
+++ b/theseus/index.html
@@ -100,12 +100,13 @@
   <div class="alert alert-light border d-flex flex-wrap align-items-center justify-content-between">
     <div class="mb-2 mb-sm-0"><strong>Resources:</strong></div>
     <div class="d-flex flex-wrap">
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#content">Book</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#front-matter">Front Matter</a>
+      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Files</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Images</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Data</a>
       <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#resources">Code</a>
-      <a class="btn btn-sm btn-outline-primary mr-2 mb-2" href="#chapters">Chapters</a>
     </div>
   </div>
 </div>
