--- a/theseus/index.html
+++ b/theseus/index.html
@@ -114,8 +114,10 @@
 <div id="content">
   <div class="container">
     <div style="display:inline-block;"><br><br>
-      <strong>Chile's Transformation Amidst Crisis: The Theseus Paradox</strong> <br><br>
-      Welcome to the author's website of <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Here you can find supplemental material, such as data, code, and references.
+
+      <h2>Chile's Transformation Amidst Crisis: The Theseus Paradox</h2>
+      <p class="text-muted">Welcome to the author's website of <em>Chile's Transformation Amidst Crisis: The Theseus Paradox</em>. Here you can find supplemental material, such as data, code, and references.</p>
+
     </div>
 
 
